Fixed stretched images in portfolio nav

--- a/src/assets/layouts/_portfolio.scss
+++ b/src/assets/layouts/_portfolio.scss
@@ -38,6 +38,8 @@
 .project-image img {
 	max-height: 10em;
 	margin-inline: auto;
+	height: auto;
+	width: auto;
 }
 
 .project-item {
